bitkeeper revision 1.842.1.1 (40715b38BNfFZvL7yV9c1GJbSaAK0g)
Many files:
  new file
  Upgrade Xen APIC and ACPI and PCI subsystems to new features and fixes in latest Linux 2.4.
acpi.c:
  Rename: xen/arch/i386/acpitable.c -> xen/arch/i386/acpi.c
.del-acpitable.h~539b823a64c2b9d8:
  Delete: xen/arch/i386/acpitable.h

--- a/xen/drivers/Makefile
+++ b/xen/drivers/Makefile
@@ -1,6 +1,7 @@
 
 default:
 	$(MAKE) -C char
+	$(MAKE) -C acpi
 	$(MAKE) -C pci
 	if [ "$(nodev)" != "y" ]; then \
 	$(MAKE) -C net ; \
@@ -13,6 +14,7 @@ default:
 
 clean:
 	$(MAKE) -C char clean
+	$(MAKE) -C acpi clean
 	$(MAKE) -C pci clean
 	$(MAKE) -C net clean
 	$(MAKE) -C block clean
