bitkeeper revision 1.856 (4075806dGVuPwXtbZgPbDT2-zKk0gw)
New control-interface functionality for Xenolinux. Also
extended start_info_t to include the event-channel index
for the controller interface.

--- a/tools/xentrace/Makefile
+++ b/tools/xentrace/Makefile
@@ -3,6 +3,7 @@ CC       = gcc
 CFLAGS   = -Wall -O3 
 CFLAGS  += -I../../xen/include/hypervisor-ifs
 CFLAGS  += -I../../xenolinux-sparse/include
+CFLAGS  += -I../xend/lib
 
 HDRS     = $(wildcard *.h)
 OBJS     = $(patsubst %.c,%.o,$(wildcard *.c))
