--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -6,6 +6,7 @@ SONAME   = libxc.so.$(MAJOR)
 CC       = gcc
 CFLAGS   = -c -Wall -O3 -fno-strict-aliasing
 CFLAGS  += -I../../../xen/include/hypervisor-ifs
+CFLAGS  += -I../../xend/lib
 CFLAGS  += -I../../../xenolinux-sparse/include
 
 HDRS     = $(wildcard *.h)
