bitkeeper revision 1.867 (4083dc17x4KfiVBhD7lCtJYk8h8OjA)
Arrange directory structure for new I/O drivers.

--- a/xenolinux-2.4.26-sparse/arch/xen/Makefile
+++ b/xenolinux-2.4.26-sparse/arch/xen/Makefile
@@ -51,7 +51,7 @@ HEAD := arch/xen/kernel/head.o arch/xen/kernel/init_task.o
 SUBDIRS += arch/xen/kernel arch/xen/mm arch/xen/lib
 SUBDIRS += arch/xen/drivers/console 
 SUBDIRS += arch/xen/drivers/evtchn
-ifdef CONFIG_XEN_PHYSDEV_ACCESS
+ifdef CONFIG_XEN_NEWIO
 SUBDIRS += arch/xen/drivers/vblkif
 SUBDIRS += arch/xen/drivers/vnetif
 else
@@ -66,7 +66,7 @@ endif
 CORE_FILES += arch/xen/kernel/kernel.o arch/xen/mm/mm.o
 CORE_FILES += arch/xen/drivers/evtchn/drv.o
 CORE_FILES += arch/xen/drivers/console/drv.o
-ifdef CONFIG_XEN_PHYSDEV_ACCESS
+ifdef CONFIG_XEN_NEWIO
 CORE_FILES += arch/xen/drivers/vblkif/drv.o
 CORE_FILES += arch/xen/drivers/vnetif/drv.o
 else
