--- a/xenolinux-2.4.26-sparse/arch/xen/drivers/vnetif/Makefile
+++ b/xenolinux-2.4.26-sparse/arch/xen/drivers/vnetif/Makefile
@@ -1,3 +1,10 @@
+
 O_TARGET := drv.o
-obj-y := vnetif.o
+
+subdir-y += frontend
+obj-y    += frontend/drv.o
+
+subdir-$(CONFIG_XEN_PHYSDEV_ACCESS) += backend
+obj-$(CONFIG_XEN_PHYSDEV_ACCESS)    += backend/drv.o
+
 include $(TOPDIR)/Rules.make
