bitkeeper revision 1.875.1.1 (408e5c5aIA7qWjhncD0DlSXVXY2xtg)
Suspend/resume now fixed
fix objdump 'debug' option in Makefile

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -15,7 +15,7 @@ default: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
 
 debug:	
-	objdump -D -S $(TARGET) > $(TARGET).s
+	objdump -D -S $(TARGET).dbg > $(TARGET).s
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
