bitkeeper revision 1.881 (409285285QhBEC23wsKBevdQUow-YA)
faster suspend

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -17,6 +17,10 @@ install: all
 	$(MAKE) -C xenctl install
 	$(MAKE) -C xend install
 
+dist: $(TARGET)
+	$(MAKE) prefix=`pwd`/../../install dist=yes install
+
+
 clean:
 	$(MAKE) -C balloon clean
 	$(MAKE) -C xc clean
