--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -4,7 +4,7 @@ MINOR    = 0
 SONAME   = libxc.so.$(MAJOR)
 
 CC       = gcc
-CFLAGS   = -c -Wall -O3 -fno-strict-aliasing
+CFLAGS   = -c -Werror -O3 -fno-strict-aliasing
 CFLAGS  += -I../../../xen/include/hypervisor-ifs
 CFLAGS  += -I../../xend/lib
 CFLAGS  += -I../../../xenolinux-sparse/include
