bitkeeper revision 1.886.1.1 (4097c3c1KkMumw6Mz5K7HxRBJXhY3Q)
suspend/resume migration improvements

--- a/xenolinux-2.4.26-sparse/arch/xen/config.in
+++ b/xenolinux-2.4.26-sparse/arch/xen/config.in
@@ -231,6 +231,8 @@ if [ "$CONFIG_XEN_PHYSDEV_ACCESS" = "y" ]; then
    #
    source drivers/input/Config.in
 else
+   define_bool CONFIG_NETDEVICES y
+
    #
    # Block device driver configuration
    #
