bitkeeper revision 1.891 (409811b6YsMa5sqRfO6eja3WkihxHA)
Move Xen network and block drivers into the DRIVERS target rather than
CORE_FILES, so they're initialised slightly later in boot order. This
fixes a problem where /dev/random blocked forever becuase entropy from
device interupts was getting lost.

--- a/xenolinux-2.4.26-sparse/arch/xen/Makefile
+++ b/xenolinux-2.4.26-sparse/arch/xen/Makefile
@@ -67,11 +67,11 @@ CORE_FILES += arch/xen/kernel/kernel.o arch/xen/mm/mm.o
 CORE_FILES += arch/xen/drivers/evtchn/drv.o
 CORE_FILES += arch/xen/drivers/console/drv.o
 ifdef CONFIG_XEN_NEWIO
-CORE_FILES += arch/xen/drivers/blkif/drv.o
-CORE_FILES += arch/xen/drivers/netif/drv.o
+DRIVERS += arch/xen/drivers/blkif/drv.o
+DRIVERS += arch/xen/drivers/netif/drv.o
 else
-CORE_FILES += arch/xen/drivers/block/drv.o
-CORE_FILES += arch/xen/drivers/network/drv.o
+DRIVERS += arch/xen/drivers/block/drv.o
+DRIVERS += arch/xen/drivers/network/drv.o
 endif
 ifdef CONFIG_XEN_PRIVILEGED_GUEST
 CORE_FILES += arch/xen/drivers/dom0/drv.o
