--- a/xenolinux-2.4.26-sparse/arch/xen/config.in
+++ b/xenolinux-2.4.26-sparse/arch/xen/config.in
@@ -101,6 +101,8 @@ if [ "$CONFIG_HIGHMEM" = "y" ]; then
    bool 'HIGHMEM I/O support' CONFIG_HIGHIO
 fi
 
+define_int CONFIG_FORCE_MAX_ZONEORDER 12
+
 #bool 'Symmetric multi-processing support' CONFIG_SMP
 #if [ "$CONFIG_SMP" = "y" -a "$CONFIG_X86_CMPXCHG" = "y" ]; then
 #   define_bool CONFIG_HAVE_DEC_LOCK y
