bitkeeper revision 1.891.1.9 (40a22b5cevMR_plncPduMaGW-P4-Vw)
Fix my silly makefile error.

--- a/tools/xentrace/Makefile
+++ b/tools/xentrace/Makefile
@@ -9,7 +9,7 @@ HDRS     = $(wildcard *.h)
 OBJS     = $(patsubst %.c,%.o,$(wildcard *.c))
 
 BIN      = xentrace
-SCRIPTS  = xentrace_cpusplit xentrace_format
+SCRIPTS  = xentrace_format
 MAN1     = $(wildcard *.1)
 MAN8     = $(wildcard *.8)
 
