bitkeeper revision 1.909 (40aa7af3CSHcaNPnOrvtJ_pFBCtarQ)
add scssi to the default xenolinux build

--- a/xenolinux-2.4.26-sparse/arch/xen/config.in
+++ b/xenolinux-2.4.26-sparse/arch/xen/config.in
@@ -235,6 +235,16 @@ if [ "$CONFIG_XEN_PHYSDEV_ACCESS" = "y" ]; then
 else
    define_bool CONFIG_NETDEVICES y
 
+   mainmenu_option next_comment
+   comment 'SCSI support'
+
+   tristate 'SCSI support' CONFIG_SCSI
+
+   if [ "$CONFIG_SCSI" != "n" ]; then
+      source drivers/scsi/Config.in
+   fi
+   endmenu
+
    #
    # Block device driver configuration
    #
