bitkeeper revision 1.955 (40c95b3fxI_3RQuXLNjRtxdT0w4w6g)
Fix Linux build

--- a/linux-2.4.26-xen-sparse/arch/xen/Makefile
+++ b/linux-2.4.26-xen-sparse/arch/xen/Makefile
@@ -119,5 +119,5 @@ archmrproper:
 
 archdep:
 	rm -f include/asm-xen/hypervisor-ifs/arch
-	( cd include/asm-xen/hypervisor-ifs ; rm -rf arch ; ln -sf arch-$(SUBARCH) arch)
+	( cd include/asm-xen/hypervisor-ifs ; rm -rf arch ; ln -sf arch-x86 arch)
 	@$(MAKEBOOT) dep
