--- a/tools/Makefile
+++ b/tools/Makefile
@@ -7,6 +7,7 @@ all:
 	$(MAKE) -C xentrace
 	$(MAKE) -C xenctl
 	$(MAKE) -C xend
+	$(MAKE) -C xenmgr
 
 install: all
 	$(MAKE) -C balloon install
@@ -16,6 +17,7 @@ install: all
 	$(MAKE) -C xentrace install
 	$(MAKE) -C xenctl install
 	$(MAKE) -C xend install
+	$(MAKE) -C xenmgr install
 
 dist: $(TARGET)
 	$(MAKE) prefix=`pwd`/../../install dist=yes install
@@ -30,4 +32,5 @@ clean:
 	$(MAKE) -C xentrace clean
 	$(MAKE) -C xenctl clean
 	$(MAKE) -C xend clean
+	$(MAKE) -C xenmgr install
 
