bitkeeper revision 1.956 (40c9ca08w7OtVOIV00pgYbkDiZW-RA)
move install and linux directories

--- a/linux-2.4.26-xen-sparse/arch/xen/Makefile
+++ b/linux-2.4.26-xen-sparse/arch/xen/Makefile
@@ -98,24 +98,34 @@ FORCE: ;
 
 .PHONY: bzImage compressed clean archclean archmrproper archdep
 
+
 bzImage: vmlinux
 	@$(MAKEBOOT) bzImage
 
 install: bzImage
 	mkdir -p $(prefix)/boot
-	install -m0644 arch/$(ARCH)/boot/bzImage $(prefix)/boot/vmlinuz-2.4.26-xen
-	install -m0644 vmlinux $(prefix)/boot/vmlinux-syms-2.4.26-xen
+	install -m0644 arch/$(ARCH)/boot/bzImage $(prefix)/boot/vmlinuz-$(KERNELRELEASE)$(INSTALLSUFFIX)
+	install -m0644 vmlinux $(prefix)/boot/vmlinux-syms-$(KERNELRELEASE)$(INSTALLSUFFIX)
+	install -m0664 .config $(prefix)/boot/config-$(KERNELRELEASE)$(INSTALLSUFFIX)
 
 dist: bzImage
 	mkdir -p ../install/boot
-	install -m0644 arch/$(ARCH)/boot/xenolinux.gz ../install/boot/vmlinuz-2.4.26-xen
-	install -m0644 vmlinux ../install/boot/vmlinux-syms-2.4.26-xen
+	install -m0644 arch/$(ARCH)/boot/bzImage ../install/boot/vmlinuz-$(KERNELRELEASE)$(INSTALLSUFFIX)
+	install -m0644 vmlinux ../install/boot/vmlinux-syms-$(KERNELRELEASE)$(INSTALLSUFFIX)
+	install -m0664 .config ../install/boot/config-$(KERNELRELEASE)$(INSTALLSUFFIX)
+
+%_config: arch/xen/defconfig-%
+	rm -f .config arch/xen/defconfig
+	cp -f arch/xen/defconfig-$(@:_config=) arch/xen/defconfig
+
 
 archclean:
 	@$(MAKEBOOT) clean
 
 archmrproper:
 	rm -f include/asm-xen/hypervisor-ifs/arch
+	rm -f $(prefix)/boot/vmlinux-syms-$(KERNELRELEASE)
+	rm -f $(prefix)/boot/vmlinuz-$(KERNELRELEASE)
 
 archdep:
 	rm -f include/asm-xen/hypervisor-ifs/arch
