bitkeeper revision 1.955.1.4 (40ca25caD-WBu24eVfed1yswCl7JeQ)
Many files:
  More x86_64 stuff.
pda.h:
  Rename: xen/include/asm-x86/x86_64/pda.h -> xen/include/asm-x86/pda.h
.del-config.h~ab742eeb14ad808f:
  Delete: xen/include/asm-x86/x86_64/config.h
arch-x86_32.h:
  Rename: xen/include/hypervisor-ifs/arch_x86_32.h -> xen/include/hypervisor-ifs/arch-x86_32.h
arch-x86_64.h:
  Rename: xen/include/hypervisor-ifs/arch_x86_64.h -> xen/include/hypervisor-ifs/arch-x86_64.h
arch_x86_32.h:
  Rename: xen/include/hypervisor-ifs/arch-x86/hypervisor-if.h -> xen/include/hypervisor-ifs/arch_x86_32.h
arch_x86_64.h:
  Rename: xen/include/hypervisor-ifs/arch-x86_64/hypervisor-if.h -> xen/include/hypervisor-ifs/arch_x86_64.h

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -41,10 +41,9 @@ $(TARGET): delete-unfresh-files make-links $(GENERATED_FILES)
 
 make-links: delete-links
 	ln -sf asm-$(TARGET_ARCH) include/asm
-	ln -sf arch-$(TARGET_ARCH) include/hypervisor-ifs/arch
 
 delete-links:
-	rm -f include/asm include/hypervisor-ifs/arch
+	rm -f include/asm
 
 # Blow away kernel.o because build info is stored statically within it.
 delete-unfresh-files:
