--- a/xen/Makefile
+++ b/xen/Makefile
@@ -15,13 +15,13 @@ default: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
 
 debug:	
-	objdump -D -S $(TARGET).dbg > $(TARGET).s
+	objdump -D -S $(TARGET)-syms > $(TARGET).s
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
 	mkdir -p $(prefix)/boot
 	install -m0644 $(TARGET).gz $(prefix)/boot
-	install -m0644 $(TARGET).dbg $(prefix)/boot
+	install -m0644 $(TARGET)-syms $(prefix)/boot
 
 dist: $(TARGET)
 	$(MAKE) prefix=`pwd`/../../install dist=yes install
