bitkeeper revision 1.959.1.3 (40cf2938j76NDs4xtyvevBrKpmogjA)
Initial checkin for grand unified management app xm.

--- a/tools/examples/Makefile
+++ b/tools/examples/Makefile
@@ -1,6 +1,6 @@
 
 INSTALL  = $(wildcard *.py)
-ETC	 = defaults democd netbsd
+ETC	 = defaults democd netbsd xmdefaults
 INITD    = init.d/xendomains init.d/xend
 
 all: 
