--- a/tools/xenmgr/Makefile
+++ b/tools/xenmgr/Makefile
@@ -11,9 +11,9 @@ install: all
 	    python setup.py install --root="$(prefix)"; \
 	fi
 	mkdir -p $(prefix)/usr/sbin
-	install -m0755 xenmgrd $(prefix)/usr/sbin
 	install -m0755 xend $(prefix)/usr/sbin
 	install -m0755 netfix $(prefix)/usr/sbin
+	install -m0755 xm $(prefix)/usr/sbin
 
 clean:
 	rm -rf build *.pyc *.pyo *.o *.a *~
