bitkeeper revision 1.1003.1.1 (40daac7c6-RMqdy1PiSH_fSWwxWf9A)
master Makefile modified to build each the dom0 and unprivileged 
xenlinux kernels in different build trees. Also, the "-xen[0U]" tag
is reflected in the kernel version name. This means that different 
modules will need to be built for each, which is less convenient for 
an expert, but probably less confusing for most users.

--- a/linux-2.4.26-xen-sparse/arch/xen/Makefile
+++ b/linux-2.4.26-xen-sparse/arch/xen/Makefile
@@ -16,7 +16,17 @@
 #           Added '-march' and '-mpreferred-stack-boundary' support
 #
 
-override EXTRAVERSION := -xen$(EXTRAVERSION)
+override EXTRAVERSION := $(subst linux-$(VERSION).$(PATCHLEVEL).$(SUBLEVEL),,$(shell basename $(TOPDIR)))$(EXTRAVERSION)
+
+# This following is pretty horrid, but I think the ends justify the
+# means: if no .config file exists copy the appropriate defconfig-XXX
+# file to .config so that we use it in preference to the plain
+# defconfig file. It would be much better if there was a hook in the
+# main Makefile to do this, but this works.
+ifneq (.config,$(wildcard .config))
+X=$(shell cp arch/xen/defconfig$(EXTRAVERSION) .config)
+-include .config
+endif
 
 LD=$(CROSS_COMPILE)ld -m elf_i386
 OBJCOPY=$(CROSS_COMPILE)objcopy -R .note -R .comment -S
@@ -115,6 +125,7 @@ dist:
 %_config: arch/xen/defconfig-%
 	rm -f .config arch/xen/defconfig
 	cp -f arch/xen/defconfig-$(@:_config=) arch/xen/defconfig
+	cp -f arch/xen/defconfig-$(@:_config=) .config
 
 
 archclean:
