bitkeeper revision 1.1011.1.6 (40db261e5GfbmMiq5MxJ6xC-2qBIsA)
Tweak.

--- a/xen/Makefile
+++ b/xen/Makefile
@@ -24,7 +24,7 @@ install: $(TARGET)
 	install -m0644 $(TARGET)-syms $(prefix)/boot
 
 dist: $(TARGET)
-	$(MAKE) prefix=`pwd`/../../install dist=yes install
+	$(MAKE) prefix=`pwd`/../install dist=yes install
 
 clean: delete-links
 	$(MAKE) -C tools clean
