bitkeeper revision 1.1024 (40dfec54gY1vhwP_t4BlnteFO7Jq2g)
remove obsolete files.

--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -19,6 +19,7 @@ all: $(TARGETS)
 install: all
 	mkdir -p $(prefix)/usr/bin
 	install -m0755 $(INSTALL) $(prefix)/usr/bin
+	install -m0755 netfix $(prefix)/usr/sbin
 	$(MAKE) -C miniterm install
 
 clean:
