bitkeeper revision 1.1023.1.3 (40e0441fshJIGN--orNXodxwL0-zXw)
Add rrobin.

--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -52,6 +52,8 @@ SRCS     += xc_misc.c
 SRCS     += xc_netbsd_build.c
 SRCS     += xc_physdev.c
 SRCS     += xc_private.c
+SRCS     += xc_rrobin.c
+
 SRCS     += $(LIB_SRCS)
 
 #CFLAGS  += -I../../../xen/include/hypervisor-ifs
