bitkeeper revision 1.1026.1.1 (40e0bcfefXJJqziVmRAnHPv-_ih9dQ)
build fix

--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -18,6 +18,7 @@ all: $(TARGETS)
 
 install: all
 	mkdir -p $(prefix)/usr/bin
+	mkdir -p $(prefix)/usr/sbin
 	install -m0755 $(INSTALL) $(prefix)/usr/bin
 	install -m0755 netfix $(prefix)/usr/sbin
 	$(MAKE) -C miniterm install
