bitkeeper revision 1.1023.1.6 (40e15b7edePZdBO_2yFHsmAtSxfw9g)
Change to using the vifctl script to init networking and
bring vifs up and down instead of doing it all ourselves.

--- a/tools/xen/Makefile
+++ b/tools/xen/Makefile
@@ -14,6 +14,8 @@ install: all
 	install -m0755 xend $(prefix)/usr/sbin
 	install -m0755 netfix $(prefix)/usr/sbin
 	install -m0755 xm $(prefix)/usr/sbin
+	mkdir -p $(prefix)/etc/xen/xend
+	install -m0755 vifctl $(prefix)/etc/xen/xend
 
 clean:
 	rm -rf build *.pyc *.pyo *.o *.a *~
