bitkeeper revision 1.1041.18.1 (40ec37bbEfVooGtkbbrgCf3ZWEhJEg)
More x86_64 stuff. Now links, but a bunch of stuff is stubbed out.
Will it run? :-)

--- a/xen/drivers/acpi/Makefile
+++ b/xen/drivers/acpi/Makefile
@@ -7,7 +7,7 @@ include $(BASEDIR)/Rules.mk
 OBJS := acpi_ksyms.o tables.o
 
 default: $(OBJS)
-	$(LD) -r -o driver.o $(OBJS)
+	$(LD) $(LDFLAGS) -r -o driver.o $(OBJS)
 
 clean:
 	rm -f *.o *~ core
