--- a/xen/drivers/char/Makefile
+++ b/xen/drivers/char/Makefile
@@ -2,7 +2,7 @@
 include $(BASEDIR)/Rules.mk
 
 default: $(OBJS)
-	$(LD) -r -o driver.o $(OBJS)
+	$(LD) $(LDFLAGS) -r -o driver.o $(OBJS)
 
 clean:
 	rm -f *.o *~ core
