bitkeeper revision 1.1062.3.2 (40f29f095EmGaaKsbz1zoQ1AZH6dQw)
Integrating save/migrate handling with xfrd.
Add suspend callback to save.

--- a/tools/xfrd/Makefile
+++ b/tools/xfrd/Makefile
@@ -18,6 +18,9 @@ INCLUDES += -I $(XEN_LINUX_INCLUDE)
 vpath %.h      $(XEN_XU)
 INCLUDES += -I $(XEN_XU)
 
+vpath %.h      $(XEN_LIBXC)
+INCLUDES += -I $(XEN_LIBXC)
+
 vpath %c       $(XEN_LIBXUTIL)
 INCLUDES += -I $(XEN_LIBXUTIL)
 
@@ -28,7 +31,9 @@ UTIL_LIB_OBJ = $(UTIL_LIB_SRC:.c=.o)
 XFRD_PROG_OBJ = $(XFRD_PROG_SRC:.c=.o)
 XFRD_PROG_OBJ += $(UTIL_LIB)
 
-CPPFLAGS += -D _XEN_XFR_STUB_
+# Flag controlling whether to use stubs.
+# Define to use stubs, undefine to use the real Xen functions.
+#CPPFLAGS += -D _XEN_XFR_STUB_
 
 CFLAGS += -g
 CFLAGS += -Wall
@@ -38,15 +43,31 @@ CFLAGS += $(INCLUDES)
 CFLAGS += -Wp,-MD,.$(@F).d
 PROG_DEP = .*.d
 
-#LDFLAGS += -L $(COMPRESS_DIR) -lz
+#$(warning XFRD_PROG_OBJ= $(XFRD_PROG_OBJ))
+#$(warning UTIL_LIB= $(UTIL_LIB))
+#$(warning UTIL_LIB_OBJ= $(UTIL_LIB_OBJ))
 
-$(warning XFRD_PROG_OBJ= $(XFRD_PROG_OBJ))
-$(warning UTIL_LIB= $(UTIL_LIB))
-$(warning UTIL_LIB_OBJ= $(UTIL_LIB_OBJ))
+# Libraries for xfrd.
+XFRD_LIBS :=
+
+XFRD_LIBS += -L $(XEN_LIBXC) -lxc
+XFRD_LIBS += -L $(XEN_LIBXUTIL) -lxutil
+
+# zlib library.
+XFRD_LIBS += -lz
+
+CURL_FLAGS = $(shell curl-config --cflags)
+CURL_LIBS  = $(shell curl-config --libs)
+CFLAGS     += $(CURL_FLAGS)
+# libcurl libraries.
+XFRD_LIBS += $(CURL_LIBS)
+
+#$(warning XFRD_LIBS = $(XFRD_LIBS))
 
 all: xfrd
 
-xfrd: $(XFRD_PROG_OBJ) -lz
+xfrd: $(XFRD_PROG_OBJ)
+	$(CC) -o $@ $^ $(XFRD_LIBS)
 
 .PHONY: install
 install: xfrd
@@ -64,5 +85,6 @@ clean:
 	$(RM) *.o *.a *.so *~ xfrd
 	$(RM) $(PROG_DEP)
 
+$(XFRD_PROG_OBJ): Makefile
 -include $(PROG_DEP)
 
